--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "react-demo-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "App.js",
+  "name": "tanstack-form-poc",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "parcel index.html",
-    "build:prod": "parcel build index.html"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ghanshyamtanchak/react-demo-app.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ghanshyamtanchak/react-demo-app/issues"
-  },
-  "homepage": "https://github.com/ghanshyamtanchak/react-demo-app#readme",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "parcel": "^2.9.3",
-    "postcss": "^8.4.28",
-    "process": "^0.11.10",
-    "tailwindcss": "^3.3.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
