--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "geist": "^1.3.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-aria-components": "^1.2.1",
     "react-dom": "^18"
   },
   "devDependencies": {
